@@ -2,12 +2,14 @@
 <component>
   <file name="libpango-1.0-0.dll"/>
   <file name="libpangowin32-1.0-0.dll"/>
+  <file name="libpangocairo-1.0-0.dll"/>
   <dir name="etc">
     <dir name="pango">
       <file name="pango.aliases"/>
       <file name="pango.modules"/>
     </dir>
   </dir>
+<!--
   <dir name="lib">
     <dir name="pango">
       <dir name="1.4.0">
@@ -17,4 +19,5 @@
       </dir>
     </dir>
   </dir>
+-->
 </component>
