@@ -8,10 +8,11 @@
     <component name=".\components\q3map2_docs.xml" root="..\..\tools\quake3\q3map2" />
     <component name=".\components\q2map.xml" root="..\..\install" />
     <component name=".\components\bspc.xml" root="bin" />
-    <component name=".\components\iconv.xml" root="..\..\..\iconv-1.9\bin" />
+    <component name=".\components\iconv.xml" root="..\..\install" />
     <component name=".\components\intl.xml" root="..\..\..\gtk2-2.10\install" />
 	<component name=".\components\glib2.xml" root="..\..\install" />
     <component name=".\components\atk.xml" root="..\..\install" />
+    <component name=".\components\cairo.xml" root="..\..\install" />
     <component name=".\components\pango.xml" root="..\..\install" />
     <component name=".\components\gtk2.xml" root="..\..\install" />
     <component name=".\components\gtkglext.xml" root="..\..\..\gtk2-2.10\install" />
