@@ -1,21 +1,19 @@
-Microsoft Visual Studio Solution File, Format Version 8.00
+Microsoft Visual Studio Solution File, Format Version 9.00
+# Visual Studio 2005
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "msiquery", "msiquery.vcproj", "{7E8B9772-912C-4E32-88E2-62F9DE03C33C}"
-	ProjectSection(ProjectDependencies) = postProject
-	EndProjectSection
 EndProject
 Global
-	GlobalSection(SolutionConfiguration) = preSolution
-		Debug = Debug
-		Release = Release
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Win32 = Debug|Win32
+		Release|Win32 = Release|Win32
 	EndGlobalSection
-	GlobalSection(ProjectConfiguration) = postSolution
-		{7E8B9772-912C-4E32-88E2-62F9DE03C33C}.Debug.ActiveCfg = Debug|Win32
-		{7E8B9772-912C-4E32-88E2-62F9DE03C33C}.Debug.Build.0 = Debug|Win32
-		{7E8B9772-912C-4E32-88E2-62F9DE03C33C}.Release.ActiveCfg = Release|Win32
-		{7E8B9772-912C-4E32-88E2-62F9DE03C33C}.Release.Build.0 = Release|Win32
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{7E8B9772-912C-4E32-88E2-62F9DE03C33C}.Debug|Win32.ActiveCfg = Debug|Win32
+		{7E8B9772-912C-4E32-88E2-62F9DE03C33C}.Debug|Win32.Build.0 = Debug|Win32
+		{7E8B9772-912C-4E32-88E2-62F9DE03C33C}.Release|Win32.ActiveCfg = Release|Win32
+		{7E8B9772-912C-4E32-88E2-62F9DE03C33C}.Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
-	GlobalSection(ExtensibilityGlobals) = postSolution
-	EndGlobalSection
-	GlobalSection(ExtensibilityAddIns) = postSolution
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
 	EndGlobalSection
 EndGlobal
